// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Dialog /> > should match the snapshot (closed) 1`] = `
<dialog
  aria-label="Test Dialog"
  class="app-no-drag fixed top-1/2 bottom-auto left-1/2 right-auto m-0 max-h-[calc(100vh-48px)] -translate-x-1/2 overflow-auto w-[420px] rounded border border-app-border bg-[#1f2126] p-0 backdrop:bg-black/50"
>
  <header
    class="flex items-center justify-between min-h-[52px] bg-neutral-200 px-4 py-2"
  >
    <h2
      class="text-md font-medium text-black"
    >
      Test Dialog
    </h2>
    <button
      aria-label="Close dialog"
      class="flex h-6 w-6 cursor-pointer items-center justify-center rounded p-0 text-xl font-light leading-none text-[#101828] hover:bg-black/10 active:bg-black/20"
      data-testid="dialog-close"
      type="button"
    >
      ×
    </button>
  </header>
  <div
    class="space-y-3 p-4"
  >
    <p>
      Dialog content
    </p>
  </div>
</dialog>
`;

exports[`<Dialog /> > should match the snapshot (open) 1`] = `
<dialog
  aria-label="Test Dialog"
  class="app-no-drag fixed top-1/2 bottom-auto left-1/2 right-auto m-0 max-h-[calc(100vh-48px)] -translate-x-1/2 overflow-auto w-[420px] rounded border border-app-border bg-[#1f2126] p-0 backdrop:bg-black/50"
  open=""
  style="top: 384px;"
>
  <header
    class="flex items-center justify-between min-h-[52px] bg-neutral-200 px-4 py-2"
  >
    <h2
      class="text-md font-medium text-black"
    >
      Test Dialog
    </h2>
    <button
      aria-label="Close dialog"
      class="flex h-6 w-6 cursor-pointer items-center justify-center rounded p-0 text-xl font-light leading-none text-[#101828] hover:bg-black/10 active:bg-black/20"
      data-testid="dialog-close"
      type="button"
    >
      ×
    </button>
  </header>
  <div
    class="space-y-3 p-4"
  >
    <p>
      Dialog content
    </p>
  </div>
</dialog>
`;
